--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
     "fs": "0.0.1-security",
     "lodash": "^4.17.20",
     "util": "^0.12.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2"
   }
 }
